# Witcher

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  pom.xml  service-rpc-task-root.patch  start
.github/workflows/: maven.yml  windows-build.yml
include/: auth_state.h  av_engine.h  common.h  http_client.h  jwt_utils.h  license_state.h
rpc/: WitcherControl.idl
src/: auth_state.cpp  av_engine.cpp  http_client.cpp  jwt_utils.cpp  license_state.cpp  main.cpp  service.cpp
src/main/java/com/example/tourism_service/: TourismServiceApplication.java
src/main/java/com/example/tourism_service/config/: DataInitializer.java  SecurityConfig.java
src/main/java/com/example/tourism_service/controller/: AuthController.java  LicenseController.java  MalwareSignatureController.java
src/main/java/com/example/tourism_service/dto/: ActivateLicenseRequest.java  ChangedFieldsDto.java  CheckLicenseRequest.java  CreateLicenseRequest.java  JwtResponse.java  MalwareSignatureRequest.java  RenewLicenseRequest.java  SignatureIdsRequest.java  Ticket.java  TicketResponse.java
src/main/java/com/example/tourism_service/entity/: Device.java  DeviceLicense.java  License.java  LicenseHistory.java  LicenseType.java  MalwareSignature.java  MalwareSignatureAudit.java  MalwareSignatureHistory.java  Product.java  Role.java  SessionStatus.java  SignatureStatus.java  User.java  UserSession.java
src/main/java/com/example/tourism_service/repository/: DeviceLicenseRepository.java  DeviceRepository.java  LicenseHistoryRepository.java  LicenseRepository.java  LicenseTypeRepository.java  MalwareSignatureAuditRepository.java  MalwareSignatureHistoryRepository.java  MalwareSignatureRepository.java  ProductRepository.java  UserRepository.java  UserSessionRepository.java
src/main/java/com/example/tourism_service/security/: CustomUserDetailsService.java  JwtAuthenticationFilter.java  JwtTokenProvider.java
src/main/java/com/example/tourism_service/service/: AuthService.java  CanonicalizationService.java  LicenseService.java  MalwareDigitalSignatureService.java  MalwareSignatureService.java  MalwareSignatureValidator.java  SignatureKeyProvider.java  SignaturePayloadBuilder.java  SignatureService.java  UserService.java
src/main/resources/: application.properties  public.crt
src/test/: SignatureServiceTest
src/test/java/com/example/tourism_service/: TourismServiceApplicationTests.java
